processed/jira/txt/LU/LU-17160.txt
Key:        LU-17160
Summary:    Provide an alternative for Py_SetProgramName() being deprecated.
Link:       https://jira.whamcloud.com/browse/LU-17160
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sat, 30 Sep 2023 07:57:58 +0000
Updated:    Thu, 21 Mar 2024 20:21:59 +0000
Resolved:   Wed, 10 Jan 2024 14:57:01 +0000

--- Description ---
Hit this building the client for Debian 12

lutf_python.c: In function ‘python_init’:
lutf_python.c:216:9: error: ‘Py_SetProgramName’ is deprecated [-Werror=deprecated-declarations]
  216 |         Py_SetProgramName(program);
      |         ^~~~~~~~~~~~~~~~~
In file included from /usr/include/python3.11/Python.h:94,
                 from lutf_python.c:1:
/usr/include/python3.11/pylifecycle.h:37:38: note: declared here
   37 | Py_DEPRECATED(3.11) PyAPI_FUNC(void) Py_SetProgramName(const wchar_t *);
      |                                      ^~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (gerrit, Thu, 21 Mar 2024 20:21:59 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/54526

Subject: LU-17160 build: Use PyConfig_InitPythonConfig 3.11 and later

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: befaf0453e0aa1729137a6805c93bcd9714c3e92

--- Comment (pjones, Wed, 10 Jan 2024 14:57:01 +0000) ---
Merged for 2.16

--- Comment (gerrit, Wed, 10 Jan 2024 07:29:03 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/52558/

Subject: LU-17160 build: Use PyConfig_InitPythonConfig 3.11 and later

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 2bf6b972d4d1918b0ab7af31f27c65d47b64a163

--- Comment (gerrit, Sat, 30 Sep 2023 08:07:59 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/52558

Subject: LU-17160 build: Use PyConfig_InitPythonConfig 3.11 and later

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: fb5edba730e88c334fa732518701352b6a4fe9a0
